# ShellProgramV2

./: CMakeLists.txt  README.md
src/: main.cpp
src/cmdline/: and_connector.cpp  and_connector.hpp  cmdline.hpp  cmdline_composite.cpp  cmdline_composite.hpp  command.cpp  command.hpp  connector.hpp  double_output_redirection_connector.cpp  double_output_redirection_connector.hpp  exit.cpp  exit.hpp  input_redirection_connector.cpp  input_redirection_connector.hpp  or_connector.cpp  or_connector.hpp  pipe_connector.cpp  pipe_connector.hpp  semicolon_connector.cpp  semicolon_connector.hpp  single_output_redirection_connector.cpp  single_output_redirection_connector.hpp
src/operators/: operators.cpp  operators.hpp
src/parser/: comment_parser.cpp  comment_parser.hpp  composite_parser.cpp  composite_parser.hpp  connector_parser.cpp  connector_parser.hpp  group_parser.cpp  group_parser.hpp  parser.cpp  parser.hpp  string_parser.hpp  vector_parser.cpp  vector_parser.hpp
src/postfixer/: postfixer.cpp  postfixer.hpp
src/shell/: shell.cpp  shell.hpp
tests/: parser_tests.cpp
